--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             <li>white board markerpens</li>
             <li>logitech mouse</li>
             <li>mouse pads</li>
+            <li>mobile covers<li>
         </ul>
     </body>
 </html>
