Add one new product

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
             <li>white board markerpens</li>
             <li>logitech mouse</li>
             <li>mouse pads</li>
-            <li>mobile covers<li>
+            <li>mobile<li>
+            <li>covers<li>
         </ul>
     </body>
 </html>
