Add new table tag in index.html test-branch

--- a/index.html
+++ b/index.html
@@ -13,5 +13,13 @@
             <li>mobile<li>
             <li>covers<li>
         </ul>
+        <ul>
+            <table border="2">
+                <tr>
+                    <td>EmpID</td>
+                    <td>david</td>
+                </tr>
+            </table>
+        </ul>
     </body>
 </html>
